partners pages completed

--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
                         xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M10 14.7875L13.0959 17.8834C13.3399 18.1274 13.7353 18.1275 13.9794 17.8838L20.625 11.25M15 27.5C8.09644 27.5 2.5 21.9036 2.5 15C2.5 8.09644 8.09644 2.5 15 2.5C21.9036 2.5 27.5 8.09644 27.5 15C27.5 21.9036 21.9036 27.5 15 27.5Z"
-                            stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
+                            stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round">
+                        </path>
                     </svg>
                     <span>Windows</span>
                 </li>
@@ -351,7 +352,8 @@
                         xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M10 14.7875L13.0959 17.8834C13.3399 18.1274 13.7353 18.1275 13.9794 17.8838L20.625 11.25M15 27.5C8.09644 27.5 2.5 21.9036 2.5 15C2.5 8.09644 8.09644 2.5 15 2.5C21.9036 2.5 27.5 8.09644 27.5 15C27.5 21.9036 21.9036 27.5 15 27.5Z"
-                            stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
+                            stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round">
+                        </path>
                     </svg>
                     <span>Web Browser</span>
                 </li>
@@ -361,7 +363,8 @@
                         xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M10 14.7875L13.0959 17.8834C13.3399 18.1274 13.7353 18.1275 13.9794 17.8838L20.625 11.25M15 27.5C8.09644 27.5 2.5 21.9036 2.5 15C2.5 8.09644 8.09644 2.5 15 2.5C21.9036 2.5 27.5 8.09644 27.5 15C27.5 21.9036 21.9036 27.5 15 27.5Z"
-                            stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
+                            stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round">
+                        </path>
                     </svg>
                     <span>Android</span>
                 </li>
@@ -371,7 +374,8 @@
                         xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M10 14.7875L13.0959 17.8834C13.3399 18.1274 13.7353 18.1275 13.9794 17.8838L20.625 11.25M15 27.5C8.09644 27.5 2.5 21.9036 2.5 15C2.5 8.09644 8.09644 2.5 15 2.5C21.9036 2.5 27.5 8.09644 27.5 15C27.5 21.9036 21.9036 27.5 15 27.5Z"
-                            stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
+                            stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round">
+                        </path>
                     </svg>
                     <span>MAC</span>
                 </li>
@@ -381,7 +385,8 @@
                         xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M10 14.7875L13.0959 17.8834C13.3399 18.1274 13.7353 18.1275 13.9794 17.8838L20.625 11.25M15 27.5C8.09644 27.5 2.5 21.9036 2.5 15C2.5 8.09644 8.09644 2.5 15 2.5C21.9036 2.5 27.5 8.09644 27.5 15C27.5 21.9036 21.9036 27.5 15 27.5Z"
-                            stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
+                            stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round">
+                        </path>
                     </svg>
                     <span>iOS</span>
                 </li>
@@ -390,7 +395,9 @@
                 class="py-4 px-8 bg-indigo-600 shadow-sm rounded-full transition-all duration-500 text-lg text-white font-semibold text-center w-fit hover:bg-indigo-700">Platforms</a>
             <!--List End-->
         </div>
-        <img class="md:max-w-[30%] w-full" src="https://direct-website.azureedge.net/assets/img/pages/open-trading-account/mobile/phones-img-mob.webp" alt="">
+        <img class="md:max-w-[30%] w-full"
+            src="https://direct-website.azureedge.net/assets/img/pages/open-trading-account/mobile/phones-img-mob.webp"
+            alt="">
     </div>
 
 
@@ -573,7 +580,7 @@
 
     <!-- footer -->
 
-  <div id="footer"></div>
+    <div id="footer"></div>
 
 
 
