--- a/csr.html
+++ b/csr.html
@@ -28,7 +28,7 @@
             <div class="mb-14 text-center">
                 <span
                     class="py-1 px-4 bg-indigo-100 rounded-full text-xs font-medium text-indigo-600 text-center">CSR</span>
-                <h2 class="text-4xl text-center font-bold text-gray-900 py-5">
+                <h2 class="md:text-4xl text-2xl text-center font-bold text-gray-900 py-5">
                     OneMission:
                     1 Lot, 1 Hope
                 </h2>
@@ -130,22 +130,22 @@
                 <!-- Block -->
                 <article class="flex items-center justify-center flex-col text-center">
                     <div class="w-14 h-14 rounded shadow-md bg-white flex justify-center items-center rotate-3 mb-6">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M17 21L20.3282 16.0077C20.6616 15.5075 20.8284 15.2574 20.9142 14.974C21 14.6906 21 14.39 21 13.7889V9.5C21 8.67157 20.3284 8 19.5 8C18.6716 8 18 8.67157 18 9.5V12.6667C18 13.3275 18 13.6579 17.8974 13.9658C17.7947 14.2737 17.5965 14.538 17.2 15.0667L16.5 16"
-                                stroke="#4f46e5" stroke-width="null" stroke-linecap="round" class="my-path"></path>
+                                stroke="#4f46e5" stroke-width="1.3" stroke-linecap="round" class="my-path"></path>
                             <path
                                 d="M7 21L3.6718 16.0077C3.33835 15.5075 3.17163 15.2574 3.08582 14.974C3 14.6906 3 14.39 3 13.7889V9.5C3 8.67157 3.67157 8 4.5 8C5.32843 8 6 8.67157 6 9.5V12.6667C6 13.3275 6 13.6579 6.10263 13.9658C6.20527 14.2737 6.40351 14.538 6.8 15.0667L7.5 16"
-                                stroke="#4f46e5" stroke-width="null" stroke-linecap="round" class="my-path"></path>
+                                stroke="#4f46e5" stroke-width="1.3" stroke-linecap="round" class="my-path"></path>
                             <path
                                 d="M14 21.0001V17.1232C14 15.7035 14 14.9937 14.2986 14.5104C14.5496 14.1041 14.9377 13.8011 15.3928 13.6561C15.934 13.4836 16.6227 13.6558 18 14.0001"
-                                stroke="#4f46e5" stroke-width="null" stroke-linecap="round" class="my-path"></path>
+                                stroke="#4f46e5" stroke-width="1.3" stroke-linecap="round" class="my-path"></path>
                             <path
                                 d="M10 21.0001V17.1232C10 15.7035 10 14.9937 9.70142 14.5104C9.45039 14.1041 9.06226 13.8011 8.60722 13.6561C8.066 13.4836 7.37733 13.6558 6 14.0001"
-                                stroke="#4f46e5" stroke-width="null" stroke-linecap="round" class="my-path"></path>
+                                stroke="#4f46e5" stroke-width="1.3" stroke-linecap="round" class="my-path"></path>
                             <path
                                 d="M8.34887 7.44953C8.40233 7.50558 8.45764 7.55851 8.51459 7.60834L10.5486 9.74053C11.2279 10.4527 11.5676 10.8088 11.9957 10.8088C12.4238 10.8088 12.7635 10.4527 13.4429 9.74053L15.2859 7.80854C15.32 7.77278 15.337 7.75489 15.3525 7.73999C15.368 7.72509 15.4107 7.68742 15.4961 7.61207C15.5501 7.56441 15.6026 7.51393 15.6535 7.46064C16.6216 6.44581 16.6155 4.79413 15.64 3.77149C14.6645 2.74886 13.0889 2.74253 12.1208 3.75736C12.0534 3.82799 11.937 3.82946 11.8696 3.75883C10.9015 2.744 9.32858 2.74752 8.35636 3.76668C7.38414 4.78584 7.38079 6.43471 8.34887 7.44953Z"
-                                stroke="#4f46e5" stroke-width="null" class="my-path"></path>
+                                stroke="#4f46e5" stroke-width="1.3" class="my-path"></path>
                         </svg>
                     </div>
                     <h2>
@@ -161,13 +161,13 @@
                 <!-- Block -->
                 <article class="flex items-center justify-center flex-col text-center">
                     <div class="w-14 h-14 rounded shadow-md bg-white flex justify-center items-center rotate-3 mb-6">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M3 12C3 11.0572 3 10.5858 3.29289 10.2929C3.58579 10 4.05719 10 5 10C5.94281 10 6.41421 10 6.70711 10.2929C7 10.5858 7 11.0572 7 12V19C7 19.9428 7 20.4142 6.70711 20.7071C6.41421 21 5.94281 21 5 21C4.05719 21 3.58579 21 3.29289 20.7071C3 20.4142 3 19.9428 3 19V12Z"
-                                stroke="#4f46e5" stroke-width="null" class="my-path"></path>
+                                stroke="#4f46e5" stroke-width="1.3" class="my-path"></path>
                             <path
                                 d="M19.9619 15.8933L20.654 11.2976C20.8148 10.2293 20.8953 9.69514 20.5961 9.34747C20.2968 8.99981 19.7566 8.99981 18.6763 8.99981H15.5695C15.0382 8.99981 14.7725 8.99981 14.5674 8.90142C14.3623 8.80299 14.1968 8.63753 14.0984 8.43236C14 8.22728 14 7.96161 14 7.43026C14 5.80513 14 4.99255 13.7027 4.63226C13.4083 4.27558 12.9467 4.10212 12.4903 4.17672C12.0293 4.25208 11.4942 4.8636 10.424 6.08664L7.49485 9.43427C7.25015 9.71393 7.12779 9.85376 7.0639 10.0238C7 10.1939 7 10.3797 7 10.7513V14.9998C7 17.8282 7 19.2425 7.87868 20.1211C8.75736 20.9998 10.1716 20.9998 13 20.9998H14.0288C16.4923 20.9998 17.7241 20.9998 18.5679 20.2736C19.4116 19.5474 19.595 18.3294 19.9619 15.8933Z"
-                                stroke="#4f46e5" stroke-width="null" stroke-linecap="round" class="my-path"></path>
+                                stroke="#4f46e5" stroke-width="1.3" stroke-linecap="round" class="my-path"></path>
                         </svg>
                     </div>
                     <h2>
@@ -183,19 +183,19 @@
                 <!-- Block -->
                 <article class="flex items-center justify-center flex-col text-center">
                     <div class="w-14 h-14 rounded shadow-md bg-white flex justify-center items-center rotate-3 mb-6">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M3 12.5C3 11.1193 4.11929 10 5.5 10C6.88071 10 8 11.1193 8 12.5V13.5C8 14.8807 6.88071 16 5.5 16C4.11929 16 3 14.8807 3 13.5V12.5Z"
-                                stroke="#4f46e5" stroke-width="null" class="my-path"></path>
+                                stroke="#4f46e5" stroke-width="1.3" class="my-path"></path>
                             <path
                                 d="M21 13.5C21 14.8807 19.8807 16 18.5 16C17.1193 16 16 14.8807 16 13.5L16 12.5C16 11.1193 17.1193 10 18.5 10C19.8807 10 21 11.1193 21 12.5V13.5Z"
-                                stroke="#4f46e5" stroke-width="null" class="my-path"></path>
+                                stroke="#4f46e5" stroke-width="1.3" class="my-path"></path>
                             <path
                                 d="M12 19C12 19 12 19 12 19ZM12 19C12.5523 19 13 19.4477 13 20M12 19C11.4477 19 11 19.4477 11 20M13 20C13 20 13 20 13 20ZM13 20C13 20.5523 12.5523 21 12 21M11 20C11 20 11 20 11 20ZM11 20C11 20.5523 11.4477 21 12 21M12 21C12 21 12 21 12 21Z"
-                                stroke="#4f46e5" stroke-width="null" class="my-path"></path>
+                                stroke="#4f46e5" stroke-width="1.3" class="my-path"></path>
                             <path d="M18 10V9C18 5.68629 15.3137 3 12 3C8.68629 3 6 5.68629 6 9V10" stroke="#4f46e5"
-                                stroke-width="null" class="my-path"></path>
-                            <path d="M13 20L14 20C16.2091 20 18 18.2091 18 16" stroke="#4f46e5" stroke-width="null"
+                                stroke-width="1.3" class="my-path"></path>
+                            <path d="M13 20L14 20C16.2091 20 18 18.2091 18 16" stroke="#4f46e5" stroke-width="1.3"
                                 class="my-path"></path>
                         </svg>
                     </div>
