--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             </p>
             <a href="javascript:;"
-                class="w-full md:w-auto md:mb-16 inline-flex items-center justify-center py-3 px-7 text-base font-semibold text-center text-white rounded-full bg-indigo-600 shadow-xs hover:bg-indigo-700 transition-all duration-500">
+                class="w-full md:w-auto md:mb-16 mb-8 inline-flex items-center justify-center py-3 px-7 text-base font-semibold text-center text-white rounded-full bg-indigo-600 shadow-xs hover:bg-indigo-700 transition-all duration-500">
                 Create an account
                 <svg class="ml-2" width="20" height="20" viewBox="0 0 20 20" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -327,7 +327,7 @@
     <!-- banner -->
 
     <div
-        class="flex items-center justify-between  md:max-w-6xl max-w-[90%] mx-auto text-gray-900 rounded-2xl bg-indigo-50 p-6 xl:py-9 xl:px-12 transition-all duration-500 hover:bg-gray-100 md:mt-10">
+        class="flex items-center justify-between md:flex-row flex-col gap-10 md:gap-5  md:max-w-6xl max-w-[90%] mx-auto text-gray-900 rounded-2xl bg-indigo-50 p-6 xl:py-9 xl:px-12 transition-all duration-500 hover:bg-gray-100 md:mt-10">
         <div class="md:max-w-[60%] w-full">
             <h3 class="font-manrope text-xl font-semibold mb-3">Trading</h3>
             <div class="flex items-center mb-6">
@@ -399,8 +399,6 @@
             src="https://direct-website.azureedge.net/assets/img/pages/open-trading-account/mobile/phones-img-mob.webp"
             alt="">
     </div>
-
-
 
     <!-- cards 2 -->
 
@@ -569,7 +567,7 @@
                 class="pl-7 pr-1.5 py-1.5 rounded-full border border-gray-300 justify-between items-center inline-flex">
                 <input
                     class="focus:outline-none text-black w-full text-opacity-20 text-base font-normal leading-relaxed"
-                    placeholder="Enter email to Subscribe">
+                    placeholder="Enter email">
                 <button
                     class="px-5 py-3 bg-indigo-600 hover:bg-indigo-700 transition-all duration-500 rounded-full shadow-sm">
                     <span class="px-2 text-white text-base font-semibold">Subscribe</span>
