pricing page added

--- a/account.html
+++ b/account.html
@@ -123,7 +123,7 @@
     </section>
 
 
-    <!-- counter -->
+    <!-- choose an account -->
 
     <main class="relative flex flex-col justify-center bg-slate-50 overflow-hidden md:mt-8">
         <div class="w-full max-w-5xl mx-auto px-4 md:px-6 py-10">
@@ -288,7 +288,7 @@
 
     <div class="p-4 md:pt-16 max-w-7xl w-full mx-auto">
         <h1
-            class="md:pt-8 pt-6 md:pb-5 text-center text-gray-900 font-bold font-manrope md:text-3xl text-2xl !leading-normal">
+            class="md:pt-8 md:pb-5 pb-3 text-center text-gray-900 font-bold font-manrope md:text-3xl text-2xl !leading-normal">
             Accounts Comparison
         </h1>
         <p class=" text-gray-500 text-lg text-center">
@@ -410,7 +410,97 @@
 
     </div>
 
-  
+
+    <!-- account -->
+
+    <main class="relative bg-slate-50 flex flex-col justify-center overflow-hidden md:mt-8">
+        <div class="w-full max-w-5xl mx-auto px-4 md:px-6 py-10">
+            <h2 class="p-4 pt-8 text-center text-gray-900 font-bold font-manrope md:text-4xl text-3xl md:pt-12 ">
+                Other <span class="text-indigo-600">Account </span>
+            </h2>
+            <!-- Animated Number Counter -->
+            <section class="grid gap-12 md:grid-cols-2 grid-cols-1 md:gap-16 md:pt-16 py-8">
+                <!-- Block -->
+                <article class="flex items-center justify-center flex-col text-center">
+                    <img src="https://capitaldoo.com/trading/account/images/DP-logo-1.png" class="mb-8" alt="">
+                    <h2>
+                        <span class="block text-slate-900 text-lg md:text-xl font-semibold mb-2">
+                            CapitalDoo CopyTrading
+
+                        </span>
+                        <span
+                            class="inline-flex md:font-medium text-xs font-medium bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-indigo-300 mb-2">
+                            community-based copy trading platform with flexible profit-sharing functionality
+
+
+                        </span>
+                    </h2>
+                </article>
+                <article class="flex items-center justify-center flex-col text-center">
+                    <img src="https://capitaldoo.com/trading/account/images/DP-logo-1.png" class="mb-8" alt="">
+                    <h2>
+                        <span class="block text-slate-900 text-lg md:text-xl font-semibold mb-2">
+                            FOLLOWME Account
+                        </span>
+                        <span
+                            class="inline-flex md:font-medium text-xs font-medium bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-indigo-300 mb-2">
+                            Gain professional trading experience with social trading
+                        </span>
+                    </h2>
+                </article>
+
+            </section>
+        </div>
+    </main>
+    <!-- account -->
+
+    <main class="relative flex flex-col justify-center overflow-hidden md:mt-8">
+        <div class="w-full max-w-5xl mx-auto px-4 md:px-6 py-10">
+            <h2 class="p-4 pt-8 text-center text-gray-900 font-bold font-manrope md:text-4xl text-3xl md:pt-12 ">
+                Regulatory <span class="text-indigo-600">Compliance </span>
+            </h2>
+            <!-- Animated Number Counter -->
+            <section class="grid gap-12 md:grid-cols-2 grid-cols-1 items-start md:gap-16 md:pt-16 py-8">
+                <!-- Block -->
+                <article class="flex items-center justify-center flex-col text-center">
+                    <svg class="mb-8" width="64px" height="64px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10 21H14C16.8284 21 18.2426 21 19.1213 20.1213C20 19.2426 20 17.8284 20 15V9.0208C20 8.26895 20 7.89303 19.8694 7.54964C19.7389 7.20625 19.4891 6.92528 18.9896 6.36334L17.1934 4.34254C16.6058 3.68154 16.312 3.35104 15.9212 3.17552C15.5303 3 15.0881 3 14.2037 3H10C7.17157 3 5.75736 3 4.87868 3.87868C4 4.75736 4 6.17157 4 9V15C4 17.8284 4 19.2426 4.87868 20.1213C5.75736 21 7.17157 21 10 21Z" stroke="#4f46e5" stroke-width="null" class="my-path"></path>
+                        <path d="M14.5 3V6C14.5 6.46466 14.5 6.69698 14.5384 6.89018C14.6962 7.68356 15.3164 8.30376 16.1098 8.46157C16.303 8.5 16.5353 8.5 17 8.5H20" stroke="#4f46e5" stroke-width="null" class="my-path"></path>
+                        <path d="M13.5 14.5L15 16" stroke="#4f46e5" stroke-width="null" stroke-linecap="round" class="my-path"></path>
+                        <path d="M14 12.5C14 13.8807 12.8807 15 11.5 15C10.1193 15 9 13.8807 9 12.5C9 11.1193 10.1193 10 11.5 10C12.8807 10 14 11.1193 14 12.5Z" stroke="#4f46e5" stroke-width="null" class="my-path"></path>
+                        </svg>
+                    <h2>
+                        <span class="block text-slate-900 text-lg md:text-xl font-semibold mb-2">
+                            Multi-regulated
+                        </span>
+                        <span
+                            class="inline-flex md:font-medium text-xs font-medium bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-indigo-300 mb-2">
+                            CapitalDoo is regulated by multiple regulatory authorities across the globe.
+                        </span>
+                    </h2>
+                </article>
+                <article class="flex items-center justify-center flex-col text-center">
+                    <svg class="mb-6" width="64" height="64" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3 17V8.89627C3 6.16864 3 4.80482 3.82186 3.93706C3.85921 3.89763 3.89763 3.85921 3.93706 3.82186C4.80482 3 6.16864 3 8.89627 3H9.19722C9.91179 3 10.2691 3 10.5895 3.112C10.7852 3.18039 10.9691 3.27879 11.1345 3.40367C11.4054 3.60816 11.6036 3.90544 12 4.5C12.3964 5.09456 12.5946 5.39184 12.8655 5.59633C13.0309 5.72121 13.2148 5.81961 13.4105 5.888C13.7309 6 14.0882 6 14.8028 6H17C18.8856 6 19.8284 6 20.4142 6.58579C21 7.17157 21 8.11438 21 10V10.5" stroke="#4f46e5" stroke-width="null" stroke-linecap="round" class="my-path"></path>
+                        <path d="M6.18537 14.9294C6.57684 13.5201 6.77258 12.8155 7.30902 12.4077C7.84546 12 8.57679 12 10.0394 12H15.7582C18.1648 12 19.3681 12 19.9685 12.7866C20.5688 13.5732 20.2514 14.7339 19.6165 17.0553L19.343 18.0553C18.9556 19.4716 18.7619 20.1797 18.2245 20.5899C17.6871 21 16.953 21 15.4847 21H9.76167C7.34616 21 6.1384 21 5.53812 20.2103C4.93785 19.4205 5.2611 18.2568 5.90759 15.9294L6.18537 14.9294Z" stroke="#4f46e5" stroke-width="null" class="my-path"></path>
+                        </svg>
+                    <h2>
+                        <span class="block text-slate-900 text-lg md:text-xl font-semibold mb-2">
+                            Secure Customer Asset Management
+
+                        </span>
+                        <span
+                            class="inline-flex md:font-medium text-xs font-medium bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-indigo-300 mb-2">
+                            CapitalDoo separates client funds from corporate funds in strict compliance with regulatory requirements, hosted by Standard Chartered, Bison, and Barclays. All to ensure the safety of client funds.
+                        </span>
+                    </h2>
+                </article>
+              
+
+            </section>
+        </div>
+    </main>
+
     <!-- banner -->
 
     <section class="bg-white ">
