--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script defer src="https://unpkg.com/alpinejs@3.2.3/dist/cdn.min.js"></script>
     <link rel="stylesheet" href="./Docs/Styles/global.css">
+    <link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -22,44 +23,143 @@
 
     <div id="navbar"></div>
 
-    <!-- main section -->
-    <section class="pt-8 lg:pt-32 bg-[url('https://pagedone.io/asset/uploads/1691055810.png')] bg-center bg-cover">
-        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 relative text-center">
-            <div class="border border-indigo-600 p-1 w-60 mx-auto rounded-full flex items-center justify-between mb-4">
-                <span class="font-inter text-xs font-medium text-gray-900 ml-3">Trade the World with Orbex </span>
-                <a href="javascript:;" class="w-8 h-8 rounded-full flex justify-center items-center bg-indigo-600">
-                    <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M2.83398 8.00019L12.9081 8.00019M9.75991 11.778L13.0925 8.44541C13.3023 8.23553 13.4073 8.13059 13.4073 8.00019C13.4073 7.86979 13.3023 7.76485 13.0925 7.55497L9.75991 4.22241"
-                            stroke="white" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
-                    </svg>
-                </a>
-            </div>
-            <h1
-                class="max-w-2xl mx-auto text-center font-manrope font-bold text-4xl text-gray-900 mb-5 md:text-5xl leading-[50px]">
-                Unlock Exclusive FREE
-                <span class="text-indigo-600">MetaTrader tools </span>
-            </h1>
-            <p class="max-w-sm mx-auto text-center text-base font-normal leading-7 text-gray-500 mb-9">
-                Designed to Transform You from a Novice to a Pro Trader 
+    <!--HTML CODE-->
+    <div class="w-full relative">
+        <div class="swiper default-carousel swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div style="background: linear-gradient(rgba(0, 0, 0, 0.679),rgba(0, 0, 0, 0.687)),url(https://images.unsplash.com/photo-1605792657660-596af9009e82?q=80&w=1604&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D) center/cover no-repeat;"
+                        class=" min-h-[80vh] flex justify-center items-center">
+                        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 relative text-center">
+                            <div
+                                class="border border-indigo-600 p-1 w-60 mx-auto rounded-full flex items-center justify-between mb-4">
+                                <span class="font-inter text-xs font-medium text-gray-300 ml-3">Trade the World with
+                                    Orbex </span>
+                                <a href="javascript:;"
+                                    class="w-8 h-8 rounded-full flex justify-center items-center bg-indigo-600">
+                                    <svg width="17" height="16" viewBox="0 0 17 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M2.83398 8.00019L12.9081 8.00019M9.75991 11.778L13.0925 8.44541C13.3023 8.23553 13.4073 8.13059 13.4073 8.00019C13.4073 7.86979 13.3023 7.76485 13.0925 7.55497L9.75991 4.22241"
+                                            stroke="white" stroke-width="1.6" stroke-linecap="round"
+                                            stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                            </div>
+                            <h1
+                                class="max-w-2xl mx-auto text-center font-manrope font-bold text-4xl text-gray-100 mb-5 md:text-5xl leading-[50px]">
+                                Unlock Exclusive FREE
+                                <span class="text-indigo-600">MetaTrader tools </span>
+                            </h1>
+                            <p class="max-w-sm mx-auto text-center text-base font-normal leading-7 text-gray-300 mb-9">
+                                Designed to Transform You from a Novice to a Pro Trader 
 
-            </p>
-            <a href="javascript:;"
-                class="w-full md:w-auto md:mb-16 mb-8 inline-flex items-center justify-center py-3 px-7 text-base font-semibold text-center text-white rounded-full bg-indigo-600 shadow-xs hover:bg-indigo-700 transition-all duration-500">
-                Create an account
-                <svg class="ml-2" width="20" height="20" viewBox="0 0 20 20" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M7.5 15L11.0858 11.4142C11.7525 10.7475 12.0858 10.4142 12.0858 10C12.0858 9.58579 11.7525 9.25245 11.0858 8.58579L7.5 5"
-                        stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                </svg>
-            </a>
-            <div class="flex justify-center max-w-4xl mx-auto">
-                <img src="https://direct-website.azureedge.net/assets/img/svelte-home/platforms/new/platforms.webp"
-                    alt="Dashboard image" class="rounded-t-3xl w-full h-auto object-cover" />
+                            </p>
+                            <a href="javascript:;"
+                                class="w-full md:w-auto md:mb-16 mb-8 inline-flex items-center justify-center py-3 px-7 text-base font-semibold text-center text-white rounded-full bg-indigo-600 shadow-xs hover:bg-indigo-700 transition-all duration-500">
+                                Create an account
+                                <svg class="ml-2" width="20" height="20" viewBox="0 0 20 20" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M7.5 15L11.0858 11.4142C11.7525 10.7475 12.0858 10.4142 12.0858 10C12.0858 9.58579 11.7525 9.25245 11.0858 8.58579L7.5 5"
+                                        stroke="white" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div style="background: linear-gradient(rgba(0, 0, 0, 0.679),rgba(0, 0, 0, 0.687)),url(https://img.freepik.com/premium-photo/chart-stock-trading-black-background-monitor_151992-2608.jpg?w=900) center/cover no-repeat;"
+                        class=" min-h-[80vh] flex justify-center items-center">
+                        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 relative text-center">
+                            <div
+                                class="border border-indigo-600 p-1 w-60 mx-auto rounded-full flex items-center justify-between mb-4">
+                                <span class="font-inter text-xs font-medium text-gray-300 ml-3">Trade the World with
+                                    Orbex </span>
+                                <a href="javascript:;"
+                                    class="w-8 h-8 rounded-full flex justify-center items-center bg-indigo-600">
+                                    <svg width="17" height="16" viewBox="0 0 17 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M2.83398 8.00019L12.9081 8.00019M9.75991 11.778L13.0925 8.44541C13.3023 8.23553 13.4073 8.13059 13.4073 8.00019C13.4073 7.86979 13.3023 7.76485 13.0925 7.55497L9.75991 4.22241"
+                                            stroke="white" stroke-width="1.6" stroke-linecap="round"
+                                            stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                            </div>
+                            <h1
+                                class="max-w-2xl mx-auto text-center font-manrope font-bold text-4xl text-gray-100 mb-5 md:text-5xl leading-[50px]">
+                                Trade the World
+
+                                <span class="text-indigo-600">with Orbex </span>
+                            </h1>
+                            <p class="max-w-sm mx-auto text-center text-base font-normal leading-7 text-gray-300 mb-9">
+                                400+ Forex, Stocks, Metals, Indices, and more!
+                            </p>
+                            <a href="javascript:;"
+                                class="w-full md:w-auto md:mb-16 mb-8 inline-flex items-center justify-center py-3 px-7 text-base font-semibold text-center text-white rounded-full bg-indigo-600 shadow-xs hover:bg-indigo-700 transition-all duration-500">
+                                Trade Now
+                                <svg class="ml-2" width="20" height="20" viewBox="0 0 20 20" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M7.5 15L11.0858 11.4142C11.7525 10.7475 12.0858 10.4142 12.0858 10C12.0858 9.58579 11.7525 9.25245 11.0858 8.58579L7.5 5"
+                                        stroke="white" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div style="background: linear-gradient(rgba(0, 0, 0, 0.801),rgba(0, 0, 0, 0.859)),url(https://img.freepik.com/premium-photo/cropped-hands-businessman-holding-smart-phone_1048944-1086884.jpg?w=900) center/cover no-repeat;"
+                        class=" min-h-[80vh] flex justify-center items-center">
+                        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 relative text-center">
+                            <div
+                                class="border border-indigo-600 p-1 w-60 mx-auto rounded-full flex items-center justify-between mb-4">
+                                <span class="font-inter text-xs font-medium text-gray-300 ml-3">Trade the World with
+                                    Orbex </span>
+                                <a href="javascript:;"
+                                    class="w-8 h-8 rounded-full flex justify-center items-center bg-indigo-600">
+                                    <svg width="17" height="16" viewBox="0 0 17 16" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M2.83398 8.00019L12.9081 8.00019M9.75991 11.778L13.0925 8.44541C13.3023 8.23553 13.4073 8.13059 13.4073 8.00019C13.4073 7.86979 13.3023 7.76485 13.0925 7.55497L9.75991 4.22241"
+                                            stroke="white" stroke-width="1.6" stroke-linecap="round"
+                                            stroke-linejoin="round" />
+                                    </svg>
+                                </a>
+                            </div>
+                            <h1
+                                class="max-w-2xl mx-auto text-center font-manrope font-bold text-4xl text-gray-100 mb-5 md:text-5xl leading-[50px]">
+                                Trade
+                                the
+
+                                <span class="text-indigo-600">Shining Opportunity </span>
+                            </h1>
+                            <p class="max-w-sm mx-auto text-center text-base font-normal leading-7 text-gray-300 mb-9">
+                                Spreads from $0.05 to
+                                Leverage Up to 1:500
+
+                            </p>
+                            <a href="javascript:;"
+                                class="w-full md:w-auto md:mb-16 mb-8 inline-flex items-center justify-center py-3 px-7 text-base font-semibold text-center text-white rounded-full bg-indigo-600 shadow-xs hover:bg-indigo-700 transition-all duration-500">
+                                Trade Gold
+                                <svg class="ml-2" width="20" height="20" viewBox="0 0 20 20" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M7.5 15L11.0858 11.4142C11.7525 10.7475 12.0858 10.4142 12.0858 10C12.0858 9.58579 11.7525 9.25245 11.0858 8.58579L7.5 5"
+                                        stroke="white" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </section>
+    </div>
+
 
     <!-- logos -->
 
@@ -643,9 +743,26 @@
 
 
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./Docs/Javascripts/global.js"></script>
     <script src="./Docs/Javascripts/navbar.js"></script>
     <script src="./Docs/Javascripts/footer.js"></script>
+    <script>
+        var swiper = new Swiper(".default-carousel", {
+            loop: true,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            autoplay: {
+                delay: 5000,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+        });
+    </script>
 </body>
 
 </html>
