--- a/compliance.html
+++ b/compliance.html
@@ -25,7 +25,7 @@
     <!-- cards -->
 
 
-    <div class="md:mt-20">
+    <div class="md:mt-36 mt-16">
         <div class="mx-auto max-w-7xl px-5 py-16 md:px-10 md:py-16  ">
             <div class="w-full">
                 <h2 class="text-4xl font-bold md:text-5xl text-gray-900">Risk <span
@@ -221,6 +221,12 @@
 
 
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+        integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+        integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./Docs/Javascripts/global.js"></script>
     <script src="./Docs/Javascripts/navbar.js"></script>
     <script src="./Docs/Javascripts/footer.js"></script>
