--- a/precious-metal.html
+++ b/precious-metal.html
@@ -22,25 +22,25 @@
 <body>
 
    
-    
+   
     <section class="pb-24 min-h-screen"
-        style="background: linear-gradient(rgba(0, 0, 0, 0.804),rgba(0, 0, 0, 0.82)), url(https://st4.depositphotos.com/17622780/30208/i/600/depositphotos_302082380-stock-photo-financial-chart-hologram-with-abstract.jpg) center/cover no-repeat;">
+        style="background: linear-gradient(rgba(0, 0, 0, 0.671),rgba(0, 0, 0, 0.597)), url(https://st4.depositphotos.com/17622780/30208/i/600/depositphotos_302082380-stock-photo-financial-chart-hologram-with-abstract.jpg) center/cover no-repeat;">
         <div id="navbar"></div>
-        <div class="flex items-center justify-center w-full min-h-[79vh] sm:pt-0 pt-16">
-            <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-                <div class="mb-14 text-center">
-                    <span class="py-1 px-4 bg-indigo-100 rounded-full text-xs font-medium text-indigo-600 text-center">
-                        Precious 
-                    </span>
-                    <h2 class="md:text-4xl text-2xl text-center font-bold text-gray-100 py-5">
-                        Precious Metal</h2>
+        <div class="flex items-center justify-center w-full min-h-screen sm:pt-0 pt-32">
+            <div class="mx-auto flex md:flex-row flex-col gap-10 items-center max-w-7xl px-4 sm:px-6 lg:px-8">
+                <div class="md:max-w-[50%] w-full md:text-start text-center">
+                    <span
+                        class="py-1 px-4 bg-indigo-100 rounded-full text-xs font-medium text-indigo-600 text-center">Precious </span>
+                    <h2 class="md:text-4xl text-2xl font-bold text-gray-100 py-5">
+                        Precious Metal
+                    </h2>
                     <p class="text-lg font-normal text-gray-300 max-w-md md:max-w-2xl mx-auto">
                         Invest in gold and silver to achieve preservation and appreciation of asset
                     </p>
                 </div>
                 <div
-                    class="flex justify-center items-center gap-x-5 gap-y-8 lg:gap-y-0 flex-wrap md:flex-wrap lg:flex-nowrap lg:flex-row lg:justify-between lg:gap-x-8">
-                    <div class="relative w-full text-center max-md:max-w-sm max-md:mx-auto group md:w-2/5 lg:w-1/4">
+                    class="grid md:grid-cols-2 md:max-w-[50%] justify-center items-center gap-x-5 gap-y-20 lg:gap-y-10 flex-wrap md:flex-wrap lg:flex-nowrap lg:flex-row lg:justify-between lg:gap-x-8">
+                    <div class="relative w-full text-center max-md:max-w-sm max-md:mx-auto group ">
                         <div
                             class="bg-indigo-50 rounded-lg flex justify-center items-center mb-5 w-20 h-20 mx-auto cursor-pointer transition-all duration-500 group-hover:bg-indigo-600">
                             <svg class="stroke-indigo-600 transition-all duration-500 group-hover:stroke-white"
@@ -58,7 +58,7 @@
                             Click on “Register” and enter your details to sign up.
                         </p>
                     </div>
-                    <div class="relative w-full text-center max-md:max-w-sm max-md:mx-auto group md:w-2/5 lg:w-1/4">
+                    <div class="relative w-full text-center max-md:max-w-sm max-md:mx-auto group ">
                         <div
                             class="bg-pink-50 rounded-lg flex justify-center items-center mb-5 w-20 h-20 mx-auto cursor-pointer transition-all duration-500 group-hover:bg-pink-600">
                             <svg class="stroke-pink-600 transition-all duration-500 group-hover:stroke-white" width="30"
@@ -84,7 +84,7 @@
                             Complete the verification process and your account will be activated immediately.
                         </p>
                     </div>
-                    <div class="relative w-full text-center max-md:max-w-sm max-md:mx-auto group md:w-2/5 lg:w-1/4">
+                    <div class="relative w-full text-center max-md:max-w-sm max-md:mx-auto group ">
 
                         <div
                             class="bg-orange-50 rounded-lg flex justify-center items-center mb-5 w-20 h-20 mx-auto cursor-pointer transition-all duration-500 group-hover:bg-orange-600">
@@ -103,7 +103,7 @@
                             Deposit funds via our fast and secure payment gateways.
                         </p>
                     </div>
-                    <div class="relative w-full text-center max-md:max-w-sm max-md:mx-auto group md:w-2/5 lg:w-1/4">
+                    <div class="relative w-full text-center max-md:max-w-sm max-md:mx-auto group ">
                         <div
                             class="bg-teal-50 rounded-lg flex justify-center items-center mb-5 w-20 h-20 mx-auto cursor-pointer transition-all duration-500 group-hover:bg-teal-600">
                             <svg class="stroke-teal-600 transition-all duration-500 group-hover:stroke-white" width="30"
@@ -124,7 +124,6 @@
             </div>
         </div>
     </section>
-
 
 
     <!-- Capture the Unlimited Opportunities in the Global Market -->
@@ -672,8 +671,8 @@
                 opportunity.
             </p>
 
-            <!-- Animated Number Counter -->
-            <section class="grid gap-12 md:grid-cols-4 grid-cols-2 md:gap-16 md:pt-20 py-8">
+              <!-- Animated Number Counter -->
+            <section id="counter-section" class="grid gap-12 md:grid-cols-4 grid-cols-2 md:gap-16 md:pt-20 py-8">
                 <!-- Block -->
                 <article class="flex items-center justify-center flex-col text-center">
                     <div class="w-14 h-14 rounded shadow-md bg-white flex justify-center items-center rotate-3 mb-6">
@@ -698,10 +697,10 @@
                     </div>
                     <h2>
                         <span class=" text-slate-900 text-2xl md:text-4xl font-bold mb-2">
-                            <span class="">10,000</span>+
+                            <span id="counter1">0</span>+
                         </span>
                         <span
-                            class="inline-flex md:font-semibold font-medium bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-indigo-300 mb-2">Financial
+                            class="block md:font-semibold font-medium bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-indigo-300 mb-2">Financial
                             Products</span>
                     </h2>
                 </article>
@@ -731,10 +730,10 @@
                     </div>
                     <h2>
                         <span class=" text-slate-900 text-2xl md:text-4xl font-bold mb-2">
-                            <span class="">60</span>+
+                            <span id="counter2">0</span>+
                         </span>
                         <span
-                            class="inline-flex md:font-semibold font-medium bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-indigo-300 mb-2">Currency
+                            class="block md:font-semibold font-medium bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-indigo-300 mb-2">Currency
                             Pairs
                         </span>
                     </h2>
@@ -761,10 +760,10 @@
                     </div>
                     <h2>
                         <span class=" text-slate-900 text-2xl md:text-4xl font-bold mb-2">
-                            <span class="">300</span>+
+                            <span id="counter3">0</span>+
                         </span>
                         <span
-                            class="inline-flex md:font-semibold font-medium bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-indigo-300 mb-2">U.S.
+                            class="block md:font-semibold font-medium bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-indigo-300 mb-2">U.S.
                             and Hong Kong Stocks
                         </span>
                     </h2>
@@ -793,10 +792,10 @@
                     </div>
                     <h2>
                         <span class=" text-slate-900 text-2xl md:text-4xl font-bold mb-2">
-                            <span class="">100</span>+
+                            <span id="counter4">0</span>+
                         </span>
                         <span
-                            class="inline-flex md:font-semibold font-medium bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-indigo-300 mb-2">Global
+                            class="block md:font-semibold font-medium bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 to-indigo-300 mb-2">Global
                             Stock Indices
                         </span>
                     </h2>
@@ -838,6 +837,12 @@
     <div id="footer"></div>
 
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+        integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+        integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./Docs/Javascripts/global.js"></script>
     <script src="./Docs/Javascripts/navbar-2.js"></script>
     <script src="./Docs/Javascripts/footer.js"></script>
